# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  include
  private_include
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( tests )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( bnfe_SOURCES
  c++-srcs/aig/AigParser.cc
  c++-srcs/blif/BlifParser.cc
  c++-srcs/blif/BlifScanner.cc
  c++-srcs/blif/CoverMgr.cc
  #c++-srcs/iscas89/C0Handler.cc
  #c++-srcs/iscas89/C1Handler.cc
  #c++-srcs/iscas89/Iscas89Handler.cc
  c++-srcs/iscas89/Iscas89Parser.cc
  c++-srcs/iscas89/Iscas89Scanner.cc
  #c++-srcs/iscas89/MuxHandler.cc
  c++-srcs/model/BfModel.cc
  c++-srcs/model/BfNode.cc
  c++-srcs/model/BfCover.cc
  c++-srcs/model/ModelImpl.cc
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_bnfe
  ${bnfe_SOURCES}
  )
