# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  include
  private_include
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

if ( Python3_FOUND )
  add_subdirectory ( py_ymbn )
endif ( Python3_FOUND )
add_subdirectory ( tests )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( bn_SOURCES
  c++-srcs/aig/AigParser.cc
  c++-srcs/blif/BlifParser.cc
  c++-srcs/blif/BlifScanner.cc
  c++-srcs/blif/CoverMgr.cc
  c++-srcs/func/FuncImpl.cc
  c++-srcs/func/FuncImpl_Bdd.cc
  c++-srcs/func/FuncImpl_Cover.cc
  c++-srcs/func/FuncImpl_Expr.cc
  c++-srcs/func/FuncImpl_TvFunc.cc
  #c++-srcs/iscas89/C0Handler.cc
  #c++-srcs/iscas89/C1Handler.cc
  #c++-srcs/iscas89/Iscas89Handler.cc
  c++-srcs/iscas89/Iscas89Parser.cc
  c++-srcs/iscas89/Iscas89Scanner.cc
  #c++-srcs/iscas89/MuxHandler.cc
  c++-srcs/truth/TruthReader.cc
  c++-srcs/model/BnFunc.cc
  c++-srcs/model/BnModel.cc
  c++-srcs/model/BnModel_modify.cc
  c++-srcs/model/BnModel_check.cc
  c++-srcs/model/BnNode.cc
  c++-srcs/model/BnSeq.cc
  c++-srcs/model/ModelImpl.cc
  c++-srcs/model/SeqImpl.cc
  c++-srcs/model/NodeImpl.cc
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_bn
  ${bn_SOURCES}
  )
