# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( aig )
add_subdirectory ( blif )
add_subdirectory ( func )
add_subdirectory ( iscas89 )
add_subdirectory ( model )
add_subdirectory ( truth )


# ===================================================================
#  ソースの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_bn
  ${aig_SOURCES}
  ${blif_SOURCES}
  ${func_SOURCES}
  ${iscas89_SOURCES}
  ${model_SOURCES}
  ${truth_SOURCES}
  )
