# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( blif_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/BlifModel.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/BlifParser.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/BlifScanner.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/CoverMgr.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ModelImpl.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
