# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( func_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/FuncImpl.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/FuncImpl_Bdd.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/FuncImpl_Cover.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/FuncImpl_Expr.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/FuncImpl_TvFunc.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
