# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( iscas89_SOURCES
  #${CMAKE_CURRENT_SOURCE_DIR}/C0Handler.cc
  #${CMAKE_CURRENT_SOURCE_DIR}/C1Handler.cc
  #${CMAKE_CURRENT_SOURCE_DIR}/Iscas89Handler.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Iscas89Model.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Iscas89Parser.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Iscas89Scanner.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ModelImpl.cc
  #${CMAKE_CURRENT_SOURCE_DIR}/MuxHandler.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
