# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( model_SOURCES
  model/BnFunc.cc
  model/BnModel.cc
  model/BnModel_modify.cc
  model/BnModel_check.cc
  model/BnNode.cc
  model/BnSeq.cc
  model/ModelImpl.cc
  model/SeqImpl.cc
  model/NodeImpl.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
