# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( model_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/BnBase.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/BnModel.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/BnModel_modify.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/BnModel_check.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ModelImpl.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
